--- a/portfolio.html
+++ b/portfolio.html
@@ -39,66 +39,66 @@
 
         <h1>Примеры работ</h1>
         <ul class="list">
-            <li><button type="button">Все</button></li>
-            <li><button type="button">Веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+            <li><button class="examples-button" type="button">Веб-сайты</button></li>
+            <li><button class="examples-button" type="button">Приложения</button></li>
+            <li><button class="examples-button" type="button">Дизайн</button></li>
+            <li><button class="examples-button" type="button">Маркетинг</button></li>
+            <li><button class="examples-button" type="button">Все</button></li>
         </ul>
 
         <ul class="list">
         <li>
             <img src="images/technokryak.jpg" alt="Технокряк" width="370">
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="examples-title">Технокряк</h2>
+            <p class="examples-text">Веб-сайт</p>
         </li>
 
         <li>
             <img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Star" width="370"> 
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="examples-title">Постер New Orlean vs Golden Star</h2>
+            <p class="examples-text">Дизайн</p>
         </li>
 
         <li>
             <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370">
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <h2 class="examples-title">Ресторан Seafood</h2>
+            <p class="examples-text">Приложение</p>
         </li>
 
         <li>
             <img src="./images/prime.jpg" alt="Проект Prime" width="370">
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <h2 class="examples-title">Проект Prime</h2>
+            <p class="examples-text">Маркетинг</p>
         </li>
 
         <li>
             <img src="./images/boxes.jpg" alt="Проект Boxes" width="370">
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+            <h2 class="examples-title">Проект Boxes</h2>
+            <p class="examples-text">Приложение</p>
         </li>
 
         <li>
             <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370">
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="examples-title">Inspiration has no Borders</h2>
+            <p class="examples-text">Веб-сайт</p>
         </li>
 
         <li>
             <img src="./images/limited.jpg" alt="Издание Limited Edition" width="370">
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="examples-title">Издание Limited Edition</h2>
+            <p class="examples-text">Дизайн</p>
         </li>
 
         <li>
             <img src="./images/lab.jpg" alt="Проект LAB" width="370">
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+            <h2 class="examples-title">Проект LAB</h2>
+            <p class="examples-text">Маркетинг</p>
         </li>
 
         <li>
             <img src="./images/growing.jpg" alt="Growing Business" width="370">
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="examples-title">Growing Business</h2>
+            <p class="examples-text">Приложение</p>
         </li>
 
     </ul>
