--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </a>
 
     <ul class="site-nav list">
-        <li><a href="./index.html" class="header-link">Студия</a></li>
+        <li><a href="./index.html" class="header-link, current">Студия</a></li>
         <li><a href="./portfolio.html" class="header-link">Портфолио</a></li>
         <li><a href="" class="header-link">Контакты</a></li>
     </ul> 
@@ -44,7 +44,7 @@
 
     <section class="features">
 
-    <h2>Наши преимущества</h2>
+    <h2 class="visually-hidden">Наши преимущества</h2>
 
 <ul class="list">
     <li>
@@ -82,29 +82,29 @@
 
 
     <section class="crew">
-        <h2>Наша Команда</h2>
+        <h2 class="crew-title">Наша Команда</h2>
     <ul class="list">
         <li> 
             <img src="./images/crew1.jpg" width="270" alt="Игорь Демьяненко Product Designer">
-            <h3 class="crew-title">Игорь Демьяненко</h3> 
+            <h3 class="crew-name">Игорь Демьяненко</h3> 
             <p class="crew-text">Product Designer</p>
         </li>
 
         <li>
             <img src="./images/crew2.jpg" width="270" alt="Ольга Репина Frontend Developer">
-            <h3 class="crew-title">Ольга Репина</h3>
+            <h3 class="crew-name">Ольга Репина</h3>
             <p class="crew-text">Frontend Developer</p>
         </li>
 
         <li>
             <img src="./images/crew3.jpg" width="270" alt="Николай Тарасов Marketing ">
-                <h3 class="crew-title">Николай Тарасов</h3>
+                <h3 class="crew-name">Николай Тарасов</h3>
                 <p class="crew-text">Marketing</p>
         </li>
         
         <li>
             <img src="./images/crew4.jpg" width="270" alt="Михаил Ермаков UI Designer">
-                <h3 class="crew-title">Михаил Ермаков</h3>
+                <h3 class="crew-name">Михаил Ермаков</h3>
                 <p class="crew-text">UI Designer</p>
         </li>
     </ul>
@@ -115,7 +115,7 @@
     <footer class="page-footer">
         <a class="footer-logo" href="./index.html"><span class="footer-logo-color" >Web</span>Studio</a>
 
-        <address>
+        <address style="font-style:normal;">
         <ul class="list">
     <li>
        <a class="footer-adress" href="https://goo.gl/maps/MrdQJycXRBSHevHh7" target="_blank" rel="noopener nofollow noreferrer"> г. Киев, пр-т Леси Украинки, 26</a>
