--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 
     <ul class="site-nav list">
         <li><a href="./index.html" class="header-link">Студия</a></li>
-        <li><a href="./portfolio.html" class="header-link">Портфолио</a></li>
+        <li><a href="./portfolio.html" class="header-link, current">Портфолио</a></li>
         <li><a href="" class="header-link">Контакты</a></li>
     </ul> 
         
@@ -37,7 +37,7 @@
 
     <section>
 
-        <h1>Примеры работ</h1>
+        <h1 class="visually-hidden">Примеры работ</h1>
         <ul class="list">
             <li><button class="examples-button" type="button">Веб-сайты</button></li>
             <li><button class="examples-button" type="button">Приложения</button></li>
@@ -49,55 +49,55 @@
         <ul class="list">
         <li>
             <img src="images/technokryak.jpg" alt="Технокряк" width="370">
-            <h2 class="examples-title">Технокряк</h2>
+            <h2 class="examples-name">Технокряк</h2>
             <p class="examples-text">Веб-сайт</p>
         </li>
 
         <li>
             <img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Star" width="370"> 
-            <h2 class="examples-title">Постер New Orlean vs Golden Star</h2>
+            <h2 class="examples-name">Постер New Orlean vs Golden Star</h2>
             <p class="examples-text">Дизайн</p>
         </li>
 
         <li>
             <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370">
-            <h2 class="examples-title">Ресторан Seafood</h2>
+            <h2 class="examples-name">Ресторан Seafood</h2>
             <p class="examples-text">Приложение</p>
         </li>
 
         <li>
             <img src="./images/prime.jpg" alt="Проект Prime" width="370">
-            <h2 class="examples-title">Проект Prime</h2>
+            <h2 class="examples-name">Проект Prime</h2>
             <p class="examples-text">Маркетинг</p>
         </li>
 
         <li>
             <img src="./images/boxes.jpg" alt="Проект Boxes" width="370">
-            <h2 class="examples-title">Проект Boxes</h2>
+            <h2 class="examples-name">Проект Boxes</h2>
             <p class="examples-text">Приложение</p>
         </li>
 
         <li>
             <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370">
-            <h2 class="examples-title">Inspiration has no Borders</h2>
+            <h2 class="examples-name">Inspiration has no Borders</h2>
             <p class="examples-text">Веб-сайт</p>
         </li>
 
         <li>
             <img src="./images/limited.jpg" alt="Издание Limited Edition" width="370">
-            <h2 class="examples-title">Издание Limited Edition</h2>
+            <h2 class="examples-name">Издание Limited Edition</h2>
             <p class="examples-text">Дизайн</p>
         </li>
 
         <li>
             <img src="./images/lab.jpg" alt="Проект LAB" width="370">
-            <h2 class="examples-title">Проект LAB</h2>
+            <h2 class="examples-name">Проект LAB</h2>
             <p class="examples-text">Маркетинг</p>
         </li>
 
         <li>
             <img src="./images/growing.jpg" alt="Growing Business" width="370">
-            <h2 class="examples-title">Growing Business</h2>
+            <h2 class="examples-name">Growing Business</h2>
             <p class="examples-text">Приложение</p>
         </li>
 
